--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     function updateAmount() {
       // Use the new proxy API endpoint here.
-      retrieve("https://rproxy.glukoo.si", function(response) {
+      retrieve("http://localhost:8080", function(response) {
         // The API returns JSON with "total_amount". Display it with the euro sign.
         document.getElementById("amount").innerHTML = parseInt(response.total_amount, 10).toString() + " &euro;";
       });
